Fixed checkbox label text color, added spacing for checkbox group

--- a/src/partials/modules/_checkbox.sass
+++ b/src/partials/modules/_checkbox.sass
@@ -50,6 +50,7 @@
     padding-left: $checkbox_labelDistance
     font-size   : 1em
     display     : inline-block
+    color       : $textColor
 
 .ts.checkbox label:empty
     padding-left: $checkbox_radioSize
@@ -97,6 +98,7 @@
     padding-left: $checkbox_labelDistance
     font-size   : 1em
     display     : inline-block
+    color       : $textColor
 
 .ts.radio.checkbox label:empty
     padding-left: $checkbox_radioSize
@@ -221,7 +223,13 @@
 .ts.checkboxes .ts.checkbox
     display: flex
     flex   : 1
+
+.ts.checkboxes:not(.horizontal) .ts.checkbox
+    margin-bottom: $checkbox_groupCheckboxSpacing
     
+.ts.checkboxes:not(.horizontal) .ts.checkbox:last-child
+    margin-bottom: 0
+
 //-------------------//
 //     Horizontal
 //-------------------//
